# Growth-Atlas2

./: .env.example  .gitignore  AGENTS.md  AI_CONVERSATION.md  ARCHITECTURE.md  DATA_MODEL.md  MVP_SPEC.md  PRODUCT_PIVOT.md  README.md  USER_FLOW.md  render.yaml
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/core/: auth.py  config.py  observability.py
backend/app/models/: __init__.py  action_plan_v2.py  analysis_report.py  common.py  decision_episode_v2.py  decision_memory_v2.py  decision_profile_v2.py  decision_report_draft_v2.py  feedback_v2.py  growth_record.py  reflection.py  user_profile.py  v2_common.py
backend/app/schemas/: __init__.py  growth_map.py  profile.py  reflection.py  v2_domain.py
backend/app/services/: __init__.py  action_feedback_service.py  ai_analysis_service.py  ai_decision_draft_service.py  context_builder.py  decision_context_retrieval.py  decision_draft_context_builder.py  decision_draft_service.py  decision_episode_service.py  decision_report_service.py  growth_map_service.py  memory_service.py  profile_service.py  reflection_service.py  (+1 more)
backend/tests/: test_action_feedback_service.py  test_ai_analysis.py  test_ai_decision_draft.py  test_api.py  test_decision_confirmation.py  test_decision_context_retrieval.py  test_decision_episode_service.py  test_decision_report_service.py  test_growth_map_service.py  test_health.py  test_memory_service.py  test_models.py  test_observability.py  test_profile_service.py  test_rls_contract.py  test_v2_domain_models.py
(+88 files in other folders)
